[package]
name = "morse-msp430"
version = "0.1.0"
authors = ["YuhanLiin <linyuhan0315@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
msp430 = "0.2.0"
nb = "0.1.2"
panic-msp430 = "0.2.0"
msp430fr2x5x-hal = "0.2.0"
msp430-rt = "0.2.4"

[dependencies.void]
version = "1.0.2"
default-features = false

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]
    
[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"

[profile.dev]
opt-level = "s"
debug = true

[profile.dev.package."*"]
opt-level = "z"

